--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: bionic
 language: python
 python:
   - "3.6"
@@ -10,7 +10,7 @@ addons:
 before_install:
   - sudo apt-get -y install python3-pip python-dev
   - sudo pip3 install -U setuptools
-  - sudo pip3 install -U dotenv
+  - sudo pip3 install -U python-dotenv
   - sudo pip3 install -U virtualenvwrapper
   - python3 -V
   - pip3 -V
