--- a/env-sample.env
+++ b/env-sample.env
@@ -5,6 +5,7 @@ RINGCENTRAL_CLIENTSECRET = <ENTER CLIENT SECRET>
 RINGCENTRAL_USERNAME = <YOUR ACCOUNT PHONE NUMBER>
 RINGCENTRAL_PASSWORD = <YOUR ACCOUNT PASSWORD>
 RINGCENTRAL_EXTENSION = <YOUR EXTENSION>
+RINGCENTRAL_JWT = <YOUR JWT>
 
 # for legacy server test
 LEGACY_USERNAME = <legacy username>
